@@ -2,7 +2,7 @@
 # Kernel/System/HTMLUtils.pm - creating and modifying html strings
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: HTMLUtils.pm,v 1.27.2.2 2012/02/02 22:17:16 des Exp $
+# $Id: HTMLUtils.pm,v 1.27.2.3 2012/02/02 22:24:09 des Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -15,7 +15,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.27.2.2 $) [1];
+$VERSION = qw($Revision: 1.27.2.3 $) [1];
 
 =head1 NAME
 
@@ -171,7 +171,7 @@ sub ToAscii {
     $Param{String} =~ s/\r/ /gs;
 
     # remove style tags
-    $Param{String} =~ s/\<style.+?\>.*\<\/style\>//gsi;
+    $Param{String} =~ s/\<style.+?\>.*?\<\/style\>//gsi;
 
     # remove <br>,<br/>,<br />, <br class="name"/>, tags and replace it with \n
     $Param{String} =~ s/\<br(\s{0,3}|\s{1,3}.+?)(\/|)\>/\n/gsi;
@@ -1051,6 +1051,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.27.2.2 $ $Date: 2012/02/02 22:17:16 $
+$Revision: 1.27.2.3 $ $Date: 2012/02/02 22:24:09 $
 
 =cut
